Ambigus spacing fix

--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -64,10 +64,6 @@
   background: var(--medio) !important;
   font-family: var(--font);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.accessibility-link {
-  background: none;
   border: none;
 }
 
